--- a/routing/public/app/templates/editBook.html
+++ b/routing/public/app/templates/editBook.html
@@ -18,7 +18,7 @@
     <div class="form-group">
         <label for="bookPublished" class="col-sm-1 control-label">Year</label>
         <div class="col-sm-4">
-            <input ng-model="bookEditor.currentBook.yearPublished" type="text" class="form-control" id="bookPublished" 
+            <input ng-model="bookEditor.currentBook.year_published" type="text" class="form-control" id="bookPublished" 
                     placeholder="Year Published">
         </div>
     </div>
